third_party/move/move-compiler-v2/tests/lambda/inline-parity/break_continue_in_lambda.lambda.exp
// -- Model dump before bytecode pipeline
module 0xc0ffee::m {
    public fun bar(): u64 {
        {
          let i: u64 = 0;
          loop {
            if Lt<u64>(i, 10) {
              i: u64 = Add<u64>(i, 1);
              if Eq<u64>(i, 5) {
                m::brk2(closure#0m::bar$lambda$1());
                m::brk2(closure#0m::bar$lambda$2());
                m::brk2(closure#0m::bar$lambda$3());
                Tuple()
              } else {
                Tuple()
              }
            } else {
              break
            }
          };
          i
        }
    }
    private fun brk() {
        break;
        Tuple()
    }
    private fun brk2(f: |()|) {
        (f)();
        Tuple()
    }
    private fun brk3() {
        loop {
          if true {
            break;
            Tuple()
          } else {
            break
          }
        }
    }
    private fun brk4() {
        loop {
          if true {
            continue;
            Tuple()
          } else {
            break
          }
        }
    }
    private fun broken() {
        break;
        Tuple()
    }
    private fun continued() {
        continue;
        Tuple()
    }
    public fun foo(): u64 {
        {
          let i: u64 = 0;
          loop {
            if Lt<u64>(i, 10) {
              i: u64 = Add<u64>(i, 1);
              if Eq<u64>(i, 5) {
                m::brk();
                m::brk3();
                m::brk4();
                Tuple()
              } else {
                Tuple()
              }
            } else {
              break
            }
          };
          i
        }
    }
    private fun bar$lambda$1() {
        break
    }
    private fun bar$lambda$2() {
        loop {
          if true {
            break
          } else {
            break
          }
        }
    }
    private fun bar$lambda$3() {
        loop {
          if true {
            continue
          } else {
            break
          }
        }
    }
} // end 0xc0ffee::m

// -- Sourcified model before bytecode pipeline
module 0xc0ffee::m {
    public fun bar(): u64 {
        let i = 0;
        while (i < 10) {
            i = i + 1;
            if (i == 5) {
                brk2(|()| bar$lambda$1());
                brk2(|()| bar$lambda$2());
                brk2(|()| bar$lambda$3());
            }
        };
        i
    }
    fun brk() {
        break;
    }
    fun brk2(f: |()|) {
        f();
    }
    fun brk3() {
        while (true) {
            break;
        }
    }
    fun brk4() {
        while (true) {
            continue;
        }
    }
    fun broken() {
        break;
    }
    fun continued() {
        continue;
    }
    public fun foo(): u64 {
        let i = 0;
        while (i < 10) {
            i = i + 1;
            if (i == 5) {
                brk();
                brk3();
                brk4();
            }
        };
        i
    }
    fun bar$lambda$1() {
        break
    }
    fun bar$lambda$2() {
        while (true) break
    }
    fun bar$lambda$3() {
        while (true) continue
    }
}


Diagnostics:
error: missing enclosing loop statement
  ┌─ tests/lambda/inline-parity/break_continue_in_lambda.move:3:9
  │
3 │         break;
  │         ^^^^^

error: Calls to function values other than inline function parameters not yet implemented
  ┌─ tests/lambda/inline-parity/break_continue_in_lambda.move:7:9
  │
7 │         f();
  │         ^^^

error: missing enclosing loop statement
   ┌─ tests/lambda/inline-parity/break_continue_in_lambda.move:40:26
   │
40 │                 brk2(| | break);
   │                          ^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/break_continue_in_lambda.move:40:22
   │
40 │                 brk2(| | break);
   │                      ^^^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/break_continue_in_lambda.move:41:8
   │
41 │         brk2(| | while (true) { break });
   │              ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/break_continue_in_lambda.move:42:8
   │
42 │         brk2(| | while (true) { continue });
   │              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: missing enclosing loop statement
   ┌─ tests/lambda/inline-parity/break_continue_in_lambda.move:49:2
   │
49 │     break;
   │     ^^^^^

error: missing enclosing loop statement
   ┌─ tests/lambda/inline-parity/break_continue_in_lambda.move:53:2
   │
53 │     continue;
   │     ^^^^^^^^
